--- a/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
+++ b/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
@@ -133,14 +133,21 @@ OPENVIDU_PRO_CLUSTER_AUTOSCALING=false
 # (and therefore distribution of load) among all available Media Nodes
 OPENVIDU_PRO_CLUSTER_LOAD_STRATEGY=streams
 
-# Max days until delete indexes in state of rollover on Elasticsearch
-# Type number >= 0
-# Default Value is 15
-# OPENVIDU_PRO_ELASTICSEARCH_MAX_DAYS_DELETE=
+# What parameter should be used to distribute the creation of new sessions
+# (and therefore distribution of load) among all available Media Nodes
+OPENVIDU_PRO_CLUSTER_LOAD_STRATEGY=streams
 
-# Private IP of OpenVidu Server Pro
-# For example 192.168.1.101
-# OPENVIDU_PRO_PRIVATE_IP=
+# What parameter should be used to distribute the creation of new sessions
+# (and therefore distribution of load) among all available Media Nodes
+OPENVIDU_PRO_CLUSTER_LOAD_STRATEGY=streams
+
+# Whether to enable or disable Network Quality API. You can monitor and
+# warn users about the quality of their networks with this feature
+# OPENVIDU_PRO_NETWORK_QUALITY=false
+
+# If OPENVIDU_PRO_NETWORK_QUALITY=true, how often the network quality
+# algorithm will be invoked for each user, in seconds
+# OPENVIDU_PRO_NETWORK_QUALITY_INTERVAL=5
 
 # Where to store recording files. Can be “local” (local storage) or “s3” (AWS bucket).
 # You will need to define a OPENVIDU_PRO_AWS_S3_BUCKET if you use it.
