--- a/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
+++ b/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
@@ -141,6 +141,15 @@ OPENVIDU_PRO_CLUSTER_LOAD_STRATEGY=streams
 # algorithm will be invoked for each user, in seconds
 # OPENVIDU_PRO_NETWORK_QUALITY_INTERVAL=5
 
+# Max days until delete indexes in state of rollover on Elasticsearch
+# Type number >= 0
+# Default Value is 15
+# OPENVIDU_PRO_ELASTICSEARCH_MAX_DAYS_DELETE=
+
+# Private IP of OpenVidu Server Pro
+# For example 192.168.1.101
+# OPENVIDU_PRO_PRIVATE_IP=
+
 # Where to store recording files. Can be “local” (local storage) or “s3” (AWS bucket).
 # You will need to define a OPENVIDU_PRO_AWS_S3_BUCKET if you use it.
 #OPENVIDU_PRO_RECORDING_STORAGE=
