openvidu-deployment: Increased AMI size for OpenVidu PRO AMI

--- a/openvidu-server/deployments/pro/aws/cfn-mkt-ov-ami.yaml.template
+++ b/openvidu-server/deployments/pro/aws/cfn-mkt-ov-ami.yaml.template
@@ -104,6 +104,13 @@ Resources:
       Tags:
         - Key: Name
           Value: !Ref AWS::StackName
+      BlockDeviceMappings:
+        - DeviceName: /dev/sda1
+          Ebs:
+            VolumeType: gp2
+            Iops: 100
+            DeleteOnTermination: true
+            VolumeSize: 10
       UserData:
         "Fn::Base64":
           !Sub |
