--- a/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
+++ b/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
@@ -150,7 +150,7 @@ OPENVIDU_PRO_CLUSTER_LOAD_STRATEGY=streams
 # For example 192.168.1.101
 # OPENVIDU_PRO_PRIVATE_IP=
 
-# Where to store recording files. Can be “local” (local storage) or “s3” (AWS bucket).
+# Where to store recording files. Can be 'local' (local storage) or 's3' (AWS bucket).
 # You will need to define a OPENVIDU_PRO_AWS_S3_BUCKET if you use it.
 #OPENVIDU_PRO_RECORDING_STORAGE=
 
