openvidu-deployment: Minor fixes. OV_CE_DEBUG_LEVEL works and move beats to rollback folder on update in openvidu pro server node

--- a/openvidu-server/deployments/ce/docker-compose/.env
+++ b/openvidu-server/deployments/ce/docker-compose/.env
@@ -39,6 +39,13 @@ LETSENCRYPT_EMAIL=user@example.com
 # SDKs, REST clients and browsers will have to connect to this port
 # HTTPS_PORT=443
 
+# Old paths are considered now deprecated, but still supported by default. 
+# OpenVidu Server will log a WARN message every time a deprecated path is called, indicating 
+# the new path that should be used instead. You can set property SUPPORT_DEPRECATED_API=false 
+# to stop allowing the use of old paths.
+# Default value is true
+# SUPPORT_DEPRECATED_API=true
+
 # If true request to with www will be redirected to non-www requests
 # Default value is false
 # REDIRECT_WWW=false
