--- a/openvidu-test-e2e/jenkins/Jenkinsfile
+++ b/openvidu-test-e2e/jenkins/Jenkinsfile
@@ -18,7 +18,7 @@ node('container') {
           sh 'rm -rf kurento-java || true'
           sh 'git clone https://github.com/OpenVidu/openvidu.git'
           sh 'cd openvidu && git fetch --all && git checkout $OPENVIDU_COMMIT'
-          sh(script: '''#!/bin/bash
+          sh(script: '''#!/bin/bash -e
             if $KURENTO_JAVA_SNAPSHOT ; then
               git clone https://github.com/Kurento/kurento-java.git
               cd kurento-java && MVN_VERSION=$(mvn --batch-mode -q -Dexec.executable=echo -Dexec.args='${project.version}' --non-recursive exec:exec)
@@ -29,7 +29,7 @@ node('container') {
               mvn dependency:get -DrepoUrl=https://maven.openvidu.io/repository/snapshots/ -Dartifact=org.kurento:kurento-test:$MVN_VERSION
             fi
           '''.stripIndent())
-          sh(script: '''#!/bin/bash
+          sh(script: '''#!/bin/bash -e
             if $KURENTO_MEDIA_SERVER_DEV ; then
               echo "Upgrading KMS to dev version"
               sudo apt-get update && sudo apt-get install -y aptitude
@@ -42,7 +42,7 @@ node('container') {
         }
 
         stage('OpenVidu Browser build') {
-          sh(script: '''#!/bin/bash
+          sh(script: '''#!/bin/bash -e
             cd openvidu
             if [[ $OPENVIDU_BROWSER_COMMIT != "default" ]]; then
               git checkout -f $OPENVIDU_BROWSER_COMMIT
@@ -56,7 +56,7 @@ node('container') {
         }
 
         stage('OpenVidu Node Client build') {
-          sh(script: '''#!/bin/bash
+          sh(script: '''#!/bin/bash -e
             cd openvidu
             if [[ $OPENVIDU_NODE_CLIENT_COMMIT != "default" ]]; then
               git checkout -f $OPENVIDU_NODE_CLIENT_COMMIT
@@ -70,8 +70,7 @@ node('container') {
         }
 
         stage('OpenVidu TestApp build') {
-          sh(script: '''#!/bin/bash
-            set -e
+          sh(script: '''#!/bin/bash -e
             cd openvidu
             if [[ $OPENVIDU_TESTAPP_COMMIT != "default" ]]; then
               git checkout -f $OPENVIDU_TESTAPP_COMMIT
@@ -87,7 +86,7 @@ node('container') {
         }
 
         stage('OpenVidu Java Client build') {
-          sh(script: '''#!/bin/bash
+          sh(script: '''#!/bin/bash -e
             cd openvidu
             if [[ $OPENVIDU_JAVA_CLIENT_COMMIT != "default" ]]; then
               git checkout -f $OPENVIDU_JAVA_CLIENT_COMMIT
@@ -114,7 +113,7 @@ node('container') {
         }
 
         stage('OpenVidu Server build') {
-          sh(script: '''#!/bin/bash
+          sh(script: '''#!/bin/bash -e
             cd openvidu/openvidu-server/src/dashboard && npm install --unsafe-perm && npm install /opt/openvidu/openvidu-browser-*.tgz && export NG_CLI_ANALYTICS="false" && npm run build-prod
             cd ../..
             mvn --batch-mode package
@@ -127,7 +126,7 @@ node('container') {
           sh 'cd /opt/openvidu/testapp && http-server -S -p 4200 &> /opt/openvidu/testapp.log &'
           sh '/usr/bin/kurento-media-server &> /kms.log &'
           sh 'until $(curl --insecure --output /dev/null --silent http://127.0.0.1:8888/kurento); do echo "Waiting for KMS..."; sleep 1; done'
-          sh(script: '''#!/bin/bash
+          sh(script: '''#!/bin/bash -e
             if [ "$DOCKER_RECORDING_VERSION" != "default" ]; then
               echo "Using custom openvidu-recording tag: $DOCKER_RECORDING_VERSION"
               java -jar -DDOMAIN_OR_PUBLIC_IP=172.17.0.1 -DOPENVIDU_SECRET=MY_SECRET -DHTTPS_PORT=4443 -DOPENVIDU_RECORDING=true -DOPENVIDU_RECORDING_CUSTOM_LAYOUT=/opt/openvidu/test-layouts -DOPENVIDU_RECORDING_VERSION=$DOCKER_RECORDING_VERSION -DOPENVIDU_WEBHOOK=true -DOPENVIDU_WEBHOOK_ENDPOINT=http://127.0.0.1:7777/webhook /opt/openvidu/openvidu-server-*.jar &> openvidu-server.log &
@@ -141,7 +140,7 @@ node('container') {
 
         stage ('OpenVidu E2E tests') {
           try {
-            sh(script: '''#!/bin/bash
+            sh(script: '''#!/bin/bash -e
               cd openvidu
               if [[ $OPENVIDU_TESTE2E_COMMIT != "default" ]]; then
                 git checkout -f $OPENVIDU_TESTE2E_COMMIT
