--- a/openvidu-test-e2e/docker/xenial/Dockerfile
+++ b/openvidu-test-e2e/docker/xenial/Dockerfile
@@ -4,7 +4,7 @@ LABEL maintainer="openvidu@gmail.com"
 
 USER root
 
-RUN apt-get update && apt-get -y upgrade 
+RUN apt-get update && apt-get -y upgrade
 
 RUN apt-get install -y software-properties-common && apt-get install -y --no-install-recommends apt-utils
 
@@ -18,12 +18,6 @@ RUN sed -i "s/DAEMON_USER=\"kurento\"/DAEMON_USER=\"root\"/g" /etc/default/kuren
 # Install Node
 RUN apt-get update && apt-get install -y curl
 RUN curl -sL https://deb.nodesource.com/setup_12.x | bash - && apt-get install -y nodejs
-
-# Java 8
-RUN apt-get install -y openjdk-8-jdk-headless
-
-# Maven
-RUN apt-get install -y maven
 
 # git
 RUN apt-get install -y git
@@ -41,6 +35,21 @@ RUN apt-get install -y ffmpeg
 
 # docker
 RUN apt-get update && apt-get -y install docker.io
+
+# Java 11
+RUN add-apt-repository ppa:openjdk-r/ppa && \
+	apt-get update && \
+	apt-get install -y openjdk-11-jdk-headless
+
+# This is a fix: JDK 11 in Ubuntu 16.04 misses Java certs
+RUN wget https://download.java.net/openjdk/jdk8u41/ri/openjdk-8u41-b04-linux-x64-14_jan_2020.tar.gz -P /tmp/jdk8
+RUN	tar -zxvf /tmp/jdk8/openjdk-*.tar.gz -C /tmp/jdk8 --strip-components=1 && \
+	cp /tmp/jdk8/jre/lib/security/cacerts /etc/ssl/certs/java && \
+	update-ca-certificates -f && \
+	rm -rf /tmp/jdk8
+
+# Maven
+RUN apt-get install -y maven
 
 # Cleanup
 RUN rm -rf /var/lib/apt/lists/*
