--- a/openvidu-server/src/dashboard/package.json
+++ b/openvidu-server/src/dashboard/package.json
@@ -1,41 +1,41 @@
 {
   "dependencies": {
     "@angular/animations": "11.0.0",
-    "@angular/cdk": "9.2.1",
+    "@angular/cdk": "11.0.0",
     "@angular/common": "11.0.0",
     "@angular/compiler": "11.0.0",
     "@angular/core": "11.0.0",
-    "@angular/flex-layout": "9.0.0-beta.29",
+    "@angular/flex-layout": "11.0.0-beta.33",
     "@angular/forms": "11.0.0",
-    "@angular/material": "9.2.1",
+    "@angular/material": "11.0.0",
     "@angular/platform-browser": "11.0.0",
     "@angular/platform-browser-dynamic": "11.0.0",
     "@angular/router": "11.0.0",
-    "core-js": "3.6.5",
-    "jquery": "3.5.0",
+    "core-js": "3.7.0",
+    "jquery": "3.5.1",
     "openvidu-browser": "2.16.0",
-    "rxjs": "6.5.5",
-    "tslib": "^2.0.0",
-    "zone.js": "0.10.3"
+    "rxjs": "6.6.3",
+    "tslib": "2.0.3",
+    "zone.js": "0.11.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.1100.1",
     "@angular/cli": "11.0.1",
     "@angular/compiler-cli": "11.0.0",
     "@angular/language-service": "11.0.0",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "13.11.1",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
-    "ts-node": "8.8.2",
-    "tslint": "~6.1.0",
+    "@types/jasmine": "3.6.1",
+    "@types/node": "14.14.7",
+    "codelyzer": "6.0.1",
+    "jasmine-core": "3.6.0",
+    "jasmine-spec-reporter": "6.0.0",
+    "karma": "5.2.3",
+    "karma-chrome-launcher": "3.1.0",
+    "karma-coverage-istanbul-reporter": "3.0.3",
+    "karma-jasmine": "4.0.1",
+    "karma-jasmine-html-reporter": "1.5.4",
+    "protractor": "7.0.0",
+    "ts-node": "9.0.0",
+    "tslint": "6.1.3",
     "typescript": "4.0.5"
   },
   "license": "Apache-2.0",
