Force codec parameters to avoid transcoding

--- a/openvidu-server/deployments/ce/docker-compose/.env
+++ b/openvidu-server/deployments/ce/docker-compose/.env
@@ -153,6 +153,15 @@ OPENVIDU_SESSIONS_GARBAGE_INTERVAL=900
 # (property 'OPENVIDU_SESSIONS_GARBAGE_INTERVAL' to 0) this property is ignored
 OPENVIDU_SESSIONS_GARBAGE_THRESHOLD=3600
 
+# All sessions of OpenVidu will try to force this codec. If OPENVIDU_ALLOW_TRANSCODING=true
+# when a codec can not be forced, transcoding will be allowed
+# Default value is VP8
+# OPENVIDU_FORCED_CODEC=VP8
+
+# Allow transcoding if codec specified in OPENVIDU_FORCED_CODEC can not be applied
+# Default value is false
+# OPENVIDU_ALLOW_TRANSCODING=false
+
 # Call Detail Record enabled
 # Whether to enable Call Detail Record or not
 # Values: true | false
