--- a/openvidu-server/src/main/resources/application.properties
+++ b/openvidu-server/src/main/resources/application.properties
@@ -45,6 +45,9 @@ OPENVIDU_STREAMS_VIDEO_MIN_SEND_BANDWIDTH=300
 OPENVIDU_SESSIONS_GARBAGE_INTERVAL=900
 OPENVIDU_SESSIONS_GARBAGE_THRESHOLD=3600
 
+OPENVIDU_FORCED_CODEC=VP8
+OPENVIDU_ALLOW_TRANSCODING=false
+
 COTURN_REDIS_IP=127.0.0.1
 COTURN_REDIS_DBNAME=0
 COTURN_REDIS_PASSWORD=turn
