openvidu-deployment: Stop elasticsearch and kibana if external services are used

--- a/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
+++ b/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
@@ -153,6 +153,12 @@ OPENVIDU_PRO_CLUSTER_LOAD_STRATEGY=streams
 # Default Value is 15
 # OPENVIDU_PRO_ELASTICSEARCH_MAX_DAYS_DELETE=
 
+# If you have an external Elasticsearch and Kibana already running, put here the url to elasticsearch and kibana services.
+# It is very important that both url have the port specified in the url.
+# If you want to use the deployed Elasticsearch and Kibana locally, keep these variables commented.
+#OPENVIDU_PRO_ELASTICSEARCH_HOST=
+#OPENVIDU_PRO_KIBANA_HOST=
+
 # Private IP of OpenVidu Server Pro
 # For example 192.168.1.101
 # OPENVIDU_PRO_PRIVATE_IP=
@@ -296,7 +302,7 @@ OPENVIDU_CDR_PATH=/opt/openvidu/cdr
 # By default ElasticSearch is configured to use "-Xms2g -Xmx2g" as Java Min and Max memory heap allocation
 # ES_JAVA_OPTS=-Xms2048m -Xmx4096m
 
-# Kibana And ElasticSearch Configuration
+# Kibana And ElasticSearch Credentials Configuration
 # --------------------------
 # Kibana And ElasticSearch Basic Auth configuration (Credentials)
 # This credentials will aso be valid for Kibana dashboard
