openvidu-deployment: Start CF deployment whith openvidu script instead of docker-compose up -d

--- a/openvidu-server/deployments/pro/aws/cfn-openvidu-server-pro-no-market.yaml.template
+++ b/openvidu-server/deployments/pro/aws/cfn-openvidu-server-pro-no-market.yaml.template
@@ -656,7 +656,8 @@ Resources:
 
             # Start openvidu application
             pushd /opt/openvidu
-            docker-compose up -d
+            export FOLLOW_OPENVIDU_LOGS=false
+            /bin/bash openvidu start
             popd
 
             # Wait for the app
