--- a/openvidu-server/deployments/pro/aws/cfn-openvidu-server-pro-no-market.yaml.template
+++ b/openvidu-server/deployments/pro/aws/cfn-openvidu-server-pro-no-market.yaml.template
@@ -656,8 +656,13 @@ Resources:
 
             # Start openvidu application
             pushd /opt/openvidu
-            export FOLLOW_OPENVIDU_LOGS=false
-            /bin/bash openvidu start
+            docker-compose up -d
+            if [[ ! -z ${ElasticsearchUrl} ]]; then
+              docker-compose stop elasticsearch
+            fi
+            if [[ ! -z ${KibanaUrl} ]]; then
+              docker-compose stop kibana
+            fi
             popd
 
             # Wait for the app
