--- a/openvidu-server/deployments/ce/docker-compose/.env
+++ b/openvidu-server/deployments/ce/docker-compose/.env
@@ -126,6 +126,15 @@ OPENVIDU_STREAMS_VIDEO_MAX_SEND_BANDWIDTH=1000
 # 0 means unconstrained
 OPENVIDU_STREAMS_VIDEO_MIN_SEND_BANDWIDTH=300
 
+# All sessions of OpenVidu will try to force this codec. If OPENVIDU_STREAMS_ALLOW_TRANSCODING=true
+# when a codec can not be forced, transcoding will be allowed
+# Default value is VP8
+# OPENVIDU_STREAMS_FORCED_VIDEO_CODEC=VP8
+
+# Allow transcoding if codec specified in OPENVIDU_STREAMS_FORCED_VIDEO_CODEC can not be applied
+# Default value is false
+# OPENVIDU_STREAMS_ALLOW_TRANSCODING=false
+
 # true to enable OpenVidu Webhook service. false' otherwise
 # Values: true | false
 OPENVIDU_WEBHOOK=false
@@ -152,15 +161,6 @@ OPENVIDU_SESSIONS_GARBAGE_INTERVAL=900
 # If non active sessions garbage collector is disabled
 # (property 'OPENVIDU_SESSIONS_GARBAGE_INTERVAL' to 0) this property is ignored
 OPENVIDU_SESSIONS_GARBAGE_THRESHOLD=3600
-
-# All sessions of OpenVidu will try to force this codec. If OPENVIDU_ALLOW_TRANSCODING=true
-# when a codec can not be forced, transcoding will be allowed
-# Default value is VP8
-# OPENVIDU_FORCED_CODEC=VP8
-
-# Allow transcoding if codec specified in OPENVIDU_FORCED_CODEC can not be applied
-# Default value is false
-# OPENVIDU_ALLOW_TRANSCODING=false
 
 # Call Detail Record enabled
 # Whether to enable Call Detail Record or not
