openvidu-server: Fix META-INF transcoding type properties

--- a/openvidu-server/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/openvidu-server/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -149,13 +149,13 @@
 		},
 		{
 			"name": "OPENVIDU_STREAMS_FORCED_VIDEO_CODEC",
-			"type": "java.lang.Integer",
+			"type": "java.lang.String",
 			"description": "Defines which video codec is being forced to be used in the browser/client",
 			"defaultValue": "VP8"
 		},
 		{
 			"name": "OPENVIDU_STREAMS_ALLOW_TRANSCODING",
-			"type": "java.lang.Integer",
+			"type": "java.lang.Boolean",
 			"description": "Defines if transcoding is allowed or not when OPENVIDU_STREAMS_FORCED_VIDEO_CODEC is not a compatible codec with the browser/client.",
 			"defaultValue": false
 		},
