--- a/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/docker-compose.yml
+++ b/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/docker-compose.yml
@@ -52,7 +52,7 @@ services:
                 max-size: "${DOCKER_LOGS_MAX_SIZE:-100M}"
 
     redis:
-        image: openvidu/openvidu-redis:1.0.0
+        image: openvidu/openvidu-redis:2.0.0-dev1
         restart: always
         network_mode: host
         environment:
@@ -62,7 +62,7 @@ services:
                 max-size: "${DOCKER_LOGS_MAX_SIZE:-100M}"
 
     coturn:
-        image: openvidu/openvidu-coturn:2.0.0
+        image: openvidu/openvidu-coturn:3.0.0-dev1
         restart: on-failure
         network_mode: host
         environment:
@@ -73,6 +73,7 @@ services:
             - MIN_PORT=40000
             - MAX_PORT=65535
             - TURN_PUBLIC_IP=${TURN_PUBLIC_IP:-auto-ipv4}
+            - ENABLE_COTURN_LOGS=false
         logging:
             options:
                 max-size: "${DOCKER_LOGS_MAX_SIZE:-100M}"
