openvidu-deployment: Automated replicate AMIs in OpenVidu PRO

--- a/openvidu-server/deployments/pro/aws/cfn-openvidu-server-pro-no-market.yaml.template
+++ b/openvidu-server/deployments/pro/aws/cfn-openvidu-server-pro-no-market.yaml.template
@@ -214,6 +214,7 @@ Parameters:
       - false
     Default: true
 
+#start_mappings
 Mappings:
   OVAMIMAP:
     eu-west-1:
@@ -222,6 +223,7 @@ Mappings:
   KMSAMIMAP:
     eu-west-1:
       AMI: KMS_AMI_ID
+#end_mappings
 
 Metadata:
   'AWS::CloudFormation::Interface':
