Minor fix templating AMI maps replication

--- a/openvidu-server/deployments/ce/aws/CF-OpenVidu.yaml.template
+++ b/openvidu-server/deployments/ce/aws/CF-OpenVidu.yaml.template
@@ -115,10 +115,12 @@ Parameters:
       - false
     Default: true
 
+#start_mappings
 Mappings:
   OVAMIMAP:
     eu-west-1:
       AMI: OV_AMI_ID
+#end_mappings
 
 Metadata:
   'AWS::CloudFormation::Interface':
