--- a/openvidu-server/deployments/pro/aws/cfn-openvidu-server-pro-no-market.yaml.template
+++ b/openvidu-server/deployments/pro/aws/cfn-openvidu-server-pro-no-market.yaml.template
@@ -672,10 +672,9 @@ Resources:
       BlockDeviceMappings:
         - DeviceName: /dev/sda1
           Ebs:
-            VolumeType: io1
-            Iops: 200
+            VolumeType: gp2
             DeleteOnTermination: true
-            VolumeSize: 100
+            VolumeSize: 200
 
   KMSSecurityGroup:
     Type: 'AWS::EC2::SecurityGroup'
